--- a/package.json
+++ b/package.json
@@ -10,8 +10,10 @@
     "lint": "eslint"
   },
   "dependencies": {
+    "framer-motion": "^12.26.2",
     "html5-qrcode": "^2.3.8",
     "jsqr": "^1.4.0",
+    "lottie-react": "^2.4.1",
     "next": "15.1.0",
     "qrcode.react": "^4.2.0",
     "react": "^19.0.0",
@@ -19,7 +21,7 @@
     "swr": "^2.3.8"
   },
   "devDependencies": {
-    "@types/node": "^20",
+    "@types/node": "^20.19.30",
     "@types/react": "^19",
     "@types/react-dom": "^19",
     "concurrently": "^9.2.1",
