--- a/package.json
+++ b/package.json
@@ -10,6 +10,9 @@
     "lint": "eslint"
   },
   "dependencies": {
+    "@googlemaps/js-api-loader": "^2.0.2",
+    "@react-google-maps/api": "^2.20.8",
+    "@types/maplibre-gl": "^1.13.2",
     "framer-motion": "^12.26.2",
     "html5-qrcode": "^2.3.8",
     "jsqr": "^1.4.0",
@@ -17,10 +20,13 @@
     "next": "15.1.0",
     "qrcode.react": "^4.2.0",
     "react": "^19.0.0",
+    "react-confetti": "^6.4.0",
     "react-dom": "^19.0.0",
+    "react-easy-crop": "^5.5.6",
     "swr": "^2.3.8"
   },
   "devDependencies": {
+    "@types/mapbox-gl": "^3.4.1",
     "@types/node": "^20.19.30",
     "@types/react": "^19",
     "@types/react-dom": "^19",
