--- a/package.json
+++ b/package.json
@@ -11,7 +11,9 @@
   },
   "dependencies": {
     "@googlemaps/js-api-loader": "^2.0.2",
+    "@googlemaps/react-wrapper": "^1.2.0",
     "@react-google-maps/api": "^2.20.8",
+    "@types/google.maps": "^3.58.1",
     "@types/maplibre-gl": "^1.13.2",
     "framer-motion": "^12.26.2",
     "html5-qrcode": "^2.3.8",
