--- a/package.json
+++ b/package.json
@@ -12,14 +12,17 @@
   "dependencies": {
     "@googlemaps/js-api-loader": "^2.0.2",
     "@googlemaps/react-wrapper": "^1.2.0",
+    "@prisma/client": "^7.2.0",
     "@react-google-maps/api": "^2.20.8",
     "@types/google.maps": "^3.58.1",
     "@types/maplibre-gl": "^1.13.2",
+    "dotenv": "^17.2.3",
     "framer-motion": "^12.26.2",
     "html5-qrcode": "^2.3.8",
     "jsqr": "^1.4.0",
     "lottie-react": "^2.4.1",
     "next": "15.1.0",
+    "prisma": "^7.2.0",
     "qrcode.react": "^4.2.0",
     "react": "^19.0.0",
     "react-confetti": "^6.4.0",
@@ -33,6 +36,7 @@
     "@types/react": "^19",
     "@types/react-dom": "^19",
     "concurrently": "^9.2.1",
+    "dotenv-cli": "^11.0.0",
     "eslint": "^8",
     "eslint-config-next": "15.0.3",
     "local-ssl-proxy": "^2.0.5",
