--- a/package.json
+++ b/package.json
@@ -16,6 +16,9 @@
     "@react-google-maps/api": "^2.20.8",
     "@types/google.maps": "^3.58.1",
     "@types/maplibre-gl": "^1.13.2",
+    "@types/node": "^20.19.30",
+    "@types/react": "^19.2.8",
+    "@types/react-dom": "^19.2.3",
     "dotenv": "^17.2.3",
     "framer-motion": "^12.26.2",
     "html5-qrcode": "^2.3.8",
@@ -28,18 +31,15 @@
     "react-confetti": "^6.4.0",
     "react-dom": "^19.0.0",
     "react-easy-crop": "^5.5.6",
-    "swr": "^2.3.8"
+    "swr": "^2.3.8",
+    "typescript": "^5.9.3"
   },
   "devDependencies": {
     "@types/mapbox-gl": "^3.4.1",
-    "@types/node": "^20.19.30",
-    "@types/react": "^19.2.8",
-    "@types/react-dom": "^19.2.3",
     "concurrently": "^9.2.1",
     "dotenv-cli": "^11.0.0",
     "eslint": "^8",
     "eslint-config-next": "15.0.3",
-    "local-ssl-proxy": "^2.0.5",
-    "typescript": "^5.9.3"
+    "local-ssl-proxy": "^2.0.5"
   }
 }
