--- a/package.json
+++ b/package.json
@@ -12,7 +12,7 @@
   "dependencies": {
     "@googlemaps/js-api-loader": "^2.0.2",
     "@googlemaps/react-wrapper": "^1.2.0",
-    "@prisma/client": "^7.2.0",
+    "@prisma/client": "5.22.0",
     "@react-google-maps/api": "^2.20.8",
     "@types/google.maps": "^3.58.1",
     "@types/maplibre-gl": "^1.13.2",
@@ -25,7 +25,7 @@
     "jsqr": "^1.4.0",
     "lottie-react": "^2.4.1",
     "next": "15.1.0",
-    "prisma": "^7.2.0",
+    "prisma": "5.22.0",
     "qrcode.react": "^4.2.0",
     "react": "^19.0.0",
     "react-confetti": "^6.4.0",
