--- a/package.json
+++ b/package.json
@@ -25,6 +25,7 @@
     "framer-motion": "^12.26.2",
     "html5-qrcode": "^2.3.8",
     "jsqr": "^1.4.0",
+    "leaflet": "^1.9.4",
     "lottie-react": "^2.4.1",
     "next": "15.1.0",
     "prisma": "5.22.0",
@@ -33,10 +34,12 @@
     "react-confetti": "^6.4.0",
     "react-dom": "^19.0.0",
     "react-easy-crop": "^5.5.6",
+    "react-leaflet": "^5.0.0",
     "swr": "^2.3.8",
     "typescript": "^5.9.3"
   },
   "devDependencies": {
+    "@types/leaflet": "^1.9.21",
     "@types/mapbox-gl": "^3.4.1",
     "concurrently": "^9.2.1",
     "dotenv-cli": "^11.0.0",
