--- a/package.json
+++ b/package.json
@@ -15,12 +15,13 @@
     "@prisma/client": "5.22.0",
     "@react-google-maps/api": "^2.20.8",
     "@types/google.maps": "^3.58.1",
+    "@types/leaflet": "^1.9.21",
     "@types/maplibre-gl": "^1.13.2",
     "@types/node": "^20.19.30",
     "@types/react": "^19.2.8",
     "@types/react-dom": "^19.2.3",
-    "agora-access-token": "^2.0.4",
     "agora-rtc-sdk-ng": "^4.24.2",
+    "agora-token": "^2.0.5",
     "dotenv": "^17.2.3",
     "framer-motion": "^12.26.2",
     "html5-qrcode": "^2.3.8",
@@ -39,7 +40,6 @@
     "typescript": "^5.9.3"
   },
   "devDependencies": {
-    "@types/leaflet": "^1.9.21",
     "@types/mapbox-gl": "^3.4.1",
     "concurrently": "^9.2.1",
     "dotenv-cli": "^11.0.0",
