--- a/package.json
+++ b/package.json
@@ -20,6 +20,7 @@
     "@types/node": "^20.19.30",
     "@types/react": "^19.2.8",
     "@types/react-dom": "^19.2.3",
+    "agora-access-token": "^2.0.4",
     "agora-rtc-sdk-ng": "^4.24.2",
     "agora-token": "^2.0.5",
     "dotenv": "^17.2.3",
