--- a/package.json
+++ b/package.json
@@ -38,7 +38,8 @@
     "react-easy-crop": "^5.5.6",
     "react-leaflet": "^5.0.0",
     "swr": "^2.3.8",
-    "typescript": "^5.9.3"
+    "typescript": "^5.9.3",
+    "zod": "^4.3.5"
   },
   "devDependencies": {
     "@types/mapbox-gl": "^3.4.1",
