--- a/package.json
+++ b/package.json
@@ -20,6 +20,7 @@
     "@types/node": "^20.19.30",
     "@types/react": "^19.2.8",
     "@types/react-dom": "^19.2.3",
+    "@types/uuid": "^10.0.0",
     "agora-access-token": "^2.0.4",
     "agora-rtc-sdk-ng": "^4.24.2",
     "agora-token": "^2.0.5",
@@ -39,6 +40,7 @@
     "react-leaflet": "^5.0.0",
     "swr": "^2.3.8",
     "typescript": "^5.9.3",
+    "uuid": "^13.0.0",
     "zod": "^4.3.5"
   },
   "devDependencies": {
