--- a/package.json
+++ b/package.json
@@ -30,6 +30,7 @@
     "jsqr": "^1.4.0",
     "leaflet": "^1.9.4",
     "lottie-react": "^2.4.1",
+    "lucide-react": "^0.562.0",
     "next": "15.1.0",
     "prisma": "5.22.0",
     "qrcode.react": "^4.2.0",
