--- a/package.json
+++ b/package.json
@@ -39,7 +39,7 @@
     "leaflet": "^1.9.4",
     "lottie-react": "^2.4.1",
     "lucide-react": "^0.562.0",
-    "next": "15.1.0",
+    "next": "^16.1.4",
     "prisma": "5.22.0",
     "qrcode.react": "^4.2.0",
     "react": "^19.0.0",
