--- a/package.json
+++ b/package.json
@@ -50,10 +50,10 @@
     "swr": "^2.3.8",
     "typescript": "^5.9.3",
     "uuid": "^13.0.0",
-    "zod": "^4.3.5"
+    "zod": "^4.3.5",
+    "@ducanh2912/next-pwa": "^10.2.9"
   },
   "devDependencies": {
-    "@ducanh2912/next-pwa": "^10.2.9",
     "@tailwindcss/postcss": "^4.1.18",
     "@types/mapbox-gl": "^3.4.1",
     "autoprefixer": "^10.4.23",
