--- a/package.json
+++ b/package.json
@@ -4,7 +4,7 @@
   "private": true,
   "scripts": {
     "dev": "next dev",
-    "dev:ssl": "concurrently \"local-ssl-proxy --source 3001 --target 3000 --hostname 0.0.0.0\" \"next dev\"",
+    "dev:ssl": "concurrently \"local-ssl-proxy --source 3000 --target 3001 --hostname 0.0.0.0\" \"next dev -p 3001 -H 0.0.0.0\"",
     "build": "next build",
     "build:static": "next build",
     "start": "next start",
@@ -52,6 +52,7 @@
     "react-dom": "^19.0.0",
     "react-easy-crop": "^5.5.6",
     "react-leaflet": "^5.0.0",
+    "react-player": "^3.4.0",
     "swr": "^2.3.8",
     "typescript": "^5.9.3",
     "uuid": "^13.0.0",
